css/style.css
a.deco-none{
    text-decoration: none;
    color: currentColor;  
    pointer-events:initial;
}
a.deco-none:hover{
    color: currentColor;
}
ul, ol, menu{
    list-style: none;
}

img{
    width: 100%;
}

#app{
    height:100vh;
    background-color: #F8F9FA;
}
.app-content{
    height: 100%;
}
navbar .row{
    background-color: white;
    
}
.logo-mobile{
    width: 33px;
}
.search-bar{
    display: block;
    position: relative;
    margin: 12px 0;
    
}
.search-bar i {
    position: absolute;
    top: 50%;
    left: 6px;
    transform: translateY(-50%);
    pointer-events:none;
}
    
.search-bar input{
    background-color: #E5E5E5;
    height: 42px;
    width: 100%;
    outline:none;
    padding-left: 40px;
    padding-right: 10px;
    border-radius: 5px;
}
.toolbar li{
    padding: 0 10px;
}
.toolbar i {
    color: darkgrey;
}
.sidebar{
    background-color: #051E34;
    background-image: url(../img/sidebar-bg.png);
    flex-shrink: 0;
    width: 67px;
    padding: 30px;
}
.sidebar-menu{
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 0;
    margin: 0;
    gap: 5px;
}
.sidebar-menu li {
    padding: 5px;
   
}
.sidebar-menu li:hover{
    background-color: rgba(255, 255, 255, 0.445);
    color: currentColor;
}

@media (min-width:992px){
    .sidebar{
        width: 148px;
    }
    .sidebar-menu{
        align-items: normal;
    }
}
.ms-pill{
    background-color: rgba(0, 0, 0, 0.3);
    color: white;
}
.img-avatar{
    aspect-ratio: 1/1;
    width: 30px;
    margin-right: 10px;
    display: inline-block;
}
#ms-offcanvas{
    width: 100%;
}

